--- a/src/postfija/View.form
+++ b/src/postfija/View.form
@@ -327,6 +327,9 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/icons/family-tree.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Arbol"/>
           </Properties>
         </Component>
@@ -342,7 +345,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="606" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="633" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
